# emohub

./: .env.example  .gitignore  .oxfmtrc.json  .oxlintrc.json  README.md  SEPC.md  package.json  tsconfig.base.json  turbo.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/research/: ARCHITECTURE-UX-POLISH.md  ARCHITECTURE.md  ARCHITECTURE_PART2.md  ARCHITECTURE_PATTERNS.md  FEATURES.md  PITFALLS-combined.md  (+10 more)
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260416_0001_rebuild_init.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: duplicates.py  gallery.py  images.py  internal_tasks.py  search.py  tags.py  uploads.py
backend/app/cli/: import_images.py
backend/app/core/: config.py  db.py  storage.py
backend/app/db/models/: __init__.py  duplicate.py  image.py  image_tag.py  tag.py  task.py
backend/app/schemas/: gallery.py  tags.py  uploads.py
backend/app/services/: gallery_service.py  hash_file.py  import_service.py  search_service.py  tag_service.py  task_queue.py  thumbnailer.py  upload_service.py  vector_index.py
backend/app/worker/jobs/: duplicate_scan.py  embed_image.py
backend/tests/: conftest.py
backend/tests/api/: test_delivery_shell.py  test_gallery_tags.py  test_internal_tasks.py  test_search.py  test_uploads.py
backend/tests/cli/: test_import_images.py
backend/tests/worker/: test_embed_job.py
prisma/: schema.prisma
(+128 files in other folders)
