[project]
name = "emohub-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.35,<0.36",
  "sqlalchemy>=2.0,<2.1",
  "alembic>=1.16,<1.17",
  "pydantic-settings>=2.10,<2.11",
  "pillow>=11.3,<11.4",
  "httpx>=0.28,<0.29",
  "python-multipart>=0.0.20,<0.0.21",
  "sqlite-vec>=0.1.6,<0.2"
]

[dependency-groups]
dev = [
  "pytest>=8.4,<8.5",
  "pytest-asyncio>=1.1,<1.2",
  "ruff>=0.12,<0.13"
]

[tool.pytest.ini_options]
pythonpath = ["."]
